fixing general aligns

--- a/dash.html
+++ b/dash.html
@@ -21,7 +21,7 @@
                 <button class="tablinks" onclick="openCity(event, 'Diet')">Daily Diet</button>
             </div>
           <br>
-          <div id="Workout" class="tabcontent" style="display:flex">
+          <div id="Workout" class="tabcontent" style="display:flex;flex-direction: column;">
             <h3 >Todays Workout</h3>
             <table id="WorkoutTable"></table>
             <button id="workoutEdit" class="btn-styled">Edit</button>
@@ -40,7 +40,7 @@
               <button id="todoBtn" onclick="todoAdd()">Add</button>
             </div>
             <br>
-            <div class="modal-span">
+            <div style="padding-inline: 5%;">
               <ul id="todoList"></ul>
             </div>
             
