--- a/dash.html
+++ b/dash.html
@@ -34,7 +34,7 @@
             </div>
         </div>
           
-          <div id="Diet" class="tabcontent" style="display: flex;flex-direction: column;">
+          <div id="Diet" class="tabcontent">
             <div class="modal-span">
               <input type="text" id="todoInput" placeholder=" ">
               <button id="todoBtn" onclick="todoAdd()">Add</button>
