--- a/mood.html
+++ b/mood.html
@@ -15,50 +15,53 @@
             <br/><br/>
             <label class="body_text" style="font-size: 20px; display: block; text-align: center;">Hours of Sleep: &nbsp <input type="number" id="sleep" name="sleep" style="width: 50px; height: 25px;"></label>
             <h4 class="headings" style="font-size: 22px; text-align: center;">Mood Board of the Day</h4>
-            <div class="moodSelection">
-              <label>
-                <input type="checkbox" id="mood_happy" name="mood_happy"><span style="color: #324373;">Happy</span>
-              </label>
-            </div>
-            <div class="moodSelection">
-              <label>
-                <input type="checkbox" id="mood_hopeful" name="mood_hopeful"><span style="color: #324373;">Hopeful</span>
-              </label>
-            </div>
-            <div class="moodSelection">
-              <label>
-                <input type="checkbox" id="mood_excited" name="mood_excited"><span style="color: #324373;">Excited</span>
-              </label>
-            </div>
-            <div class="moodSelection">
-              <label>
-                <input type="checkbox" id="mood_sad" name="mood_sad"><span style="color: #324373;">Sad</span>
-              </label>
-            </div>
-            <div class="moodSelection">
-              <label>
-                <input type="checkbox" id="mood_angry" name="mood_angry"><span style="color: #324373;">Angry</span>
-              </label>
-            </div>
-            <div class="moodSelection">
-              <label>
-                <input type="checkbox" id="mood_stressed" name="mood_stressed"><span style="color: #324373;">Stressed</span>
-              </label>
-            </div>
-            <div class="moodSelection">
-              <label>
-                <input type="checkbox" id="mood_reflective" name="mood_reflective"><span style="color: #324373;">Reflective</span>
-              </label>
-            </div>
-            <div class="moodSelection">
-              <label>
-                <input type="checkbox" id="mood_relaxed" name="mood_relaxed"><span style="color: #324373;">Relaxed</span>
-              </label>
-            </div>
-            <div class="moodSelection">
-              <label>
-                <input type="checkbox" id="mood_neutral" name="mood_neutral"><span style="color: #324373;">Neutral</span>
-              </label>
+            
+            <div id="moodRow">
+              <div class="moodSelection">
+                <label>
+                  <input type="checkbox" id="mood_happy" name="mood_happy"><span style="color: #324373;">Happy</span>
+                </label>
+              </div>
+              <div class="moodSelection">
+                <label>
+                  <input type="checkbox" id="mood_hopeful" name="mood_hopeful"><span style="color: #324373;">Hopeful</span>
+                </label>
+              </div>
+              <div class="moodSelection">
+                <label>
+                  <input type="checkbox" id="mood_excited" name="mood_excited"><span style="color: #324373;">Excited</span>
+                </label>
+              </div>
+              <div class="moodSelection">
+                <label>
+                  <input type="checkbox" id="mood_sad" name="mood_sad"><span style="color: #324373;">Sad</span>
+                </label>
+              </div>
+              <div class="moodSelection">
+                <label>
+                  <input type="checkbox" id="mood_angry" name="mood_angry"><span style="color: #324373;">Angry</span>
+                </label>
+              </div>
+              <div class="moodSelection">
+                <label>
+                  <input type="checkbox" id="mood_stressed" name="mood_stressed"><span style="color: #324373;">Stressed</span>
+                </label>
+              </div>
+              <div class="moodSelection">
+                <label>
+                  <input type="checkbox" id="mood_reflective" name="mood_reflective"><span style="color: #324373;">Reflective</span>
+                </label>
+              </div>
+              <div class="moodSelection">
+                <label>
+                  <input type="checkbox" id="mood_relaxed" name="mood_relaxed"><span style="color: #324373;">Relaxed</span>
+                </label>
+              </div>
+              <div class="moodSelection">
+                <label>
+                  <input type="checkbox" id="mood_neutral" name="mood_neutral"><span style="color: #324373;">Neutral</span>
+                </label>
+              </div>
             </div>
             <br/><br/>
             <div style="text-align: center;">
